# spatch

./: CMakeLists.txt  Documentation  README.md  spatch.deb
config/: serv1.conf  serv1.conf~  serv2.conf  serv2.conf~  serv3.conf  userdatabase.conf
includes/: config.h  endpoint.h  fs.h  group.h  list.h  parse.h  parser.h  sys_auth.h  user.h
sources/: a.out  endpoint.c  fs.c  group.c  list.c  main.c  parse.h  parseServ.c  parse_config.c  parser.c  respatch.c  spatch.c  spatch.tmp  sys_auth.c  user.c
spatch/DEBIAN/: control
test/endpoints/: firefox.com  google.com  wrong
